Trying to fix alignment

--- a/exercise-4/Styles/style.css
+++ b/exercise-4/Styles/style.css
@@ -40,7 +40,7 @@ ul li a:hover {
   background-color: #555;
 }
 
-.content {
+.container {
   margin: 0 auto;
   padding: 50px 0;
   text-align: center;
